[package]
name = "serum-router"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "serum_router"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
spl-associated-token-account = "1.0.5"
solana-program = "~1.10"

dex-v4 = { path = "../../../dex-v4/program", features = ["no-entrypoint"]}
